# trade-republic-session

./: .gitignore  LICENSE  README.md  pyproject.toml
secrets/: .gitkeep
trade_republic_session/: __init__.py  __main__.py  login.py
