[project]
name = "trade-republic-session"
version = "0.1.0"
description = "Headless Trade Republic web-session login + cookie refresh (past the AWS-WAF challenge), usable by pytr."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Unlicense" }
keywords = ["trade-republic", "pytr", "login", "session", "aws-waf", "fintech"]
dependencies = [
    # pytr does the actual TR protocol + WAF token (playwright / awswaf) and pulls
    # in playwright. Run `playwright install chromium` once for the default strategy.
    "pytr>=0.4.9",
]

[project.optional-dependencies]
totp = ["pyotp>=2.8"]

[project.scripts]
tr-session = "trade_republic_session.login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trade_republic_session"]
